2004-07-16  Wim Taymans  <wim@fluendo.com>

	* sys/ximage/ximagesink.c: (gst_ximagesink_xcontext_get):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_get_xv_support):
	FPS seems to be 0.0 to MAX everywhere else.

2004-07-15  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* gst-libs/gst/riff/riff-media.c:
	(gst_riff_create_video_caps_with_data):
	  mp42/mp43 (no caps) exist too.
	* gst/matroska/matroska-demux.c: (gst_matroska_demux_video_caps):
	  Set pixel_width/height; we've got them in-caps.
	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	* gst/wavparse/gstwavparse.c: (plugin_init):
	  Both are valid primary.
	* sys/oss/gstossmixer.c:
	  Remove i18n hack and enable translations.

2004-07-15  Benjamin Otte  <otte@gnome.org>

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_check_xshm_calls),
	(gst_xvimagesink_xvimage_new), (gst_xvimagesink_xvimage_destroy):
	  fix for non-shm xv. Original patch by Tim Ringenbach (fixes #147248)

2004-07-15  Benjamin Otte  <otte@gnome.org>

	* ext/alsa/gstalsa.c: (gst_alsa_open_audio),
	(gst_alsa_sw_params_dump), (gst_alsa_hw_params_dump),
	(gst_alsa_close_audio):
	  disable some of the debugging code for now. Writing debugging to a
	  buffer is broken in current alsalib releases.

2004-07-12  Benjamin Otte  <otte@gnome.org>

	* ext/mpeg2dec/gstmpeg2dec.c: (gst_mpeg2dec_alloc_buffer):
	  use bufferpools

2004-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/theora/theoradec.c: (gst_theora_dec_class_init),
	(theora_dec_src_query), (theora_dec_event):
	* ext/theora/theoraenc.c: (gst_theora_enc_class_init):
	  add debugging categories.  Remove \n's.

2004-07-13  Johan Dahlin  <johan@gnome.org>

	* gst/playback/gstplaybin.c (gst_play_bin_set_property) 
	(gst_play_bin_get_property): Impl.

2004-07-13  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_seek_before):
	When trying to find the stream length, seek back N pages
	instead of just one, where N is the number of streams in 